sw/source/filter/ww8/docxsdrexport.cxx
@@ -454,6 +454,7 @@ void DocxSdrExport::startDMLAnchorInline(const SwFrameFormat* pFrameFormat, cons
         awt::Point aPos(pFrameFormat->GetHoriOrient().GetPos(),
                         pFrameFormat->GetVertOrient().GetPos());
         const SdrObject* pObj = pFrameFormat->FindRealSdrObject();
+        long nRotation = 0;
         if (pObj != nullptr)
         {
             // SdrObjects know their layer, consider that instead of the frame format.
@@ -464,21 +465,28 @@ void DocxSdrExport::startDMLAnchorInline(const SwFrameFormat* pFrameFormat, cons
                                     ->getIDocumentDrawModelAccess()
                                     .GetInvisibleHellId();
 
-            lclMovePositionWithRotation(aPos, rSize, pObj->GetRotateAngle());
+            nRotation = pObj->GetRotateAngle();
+            lclMovePositionWithRotation(aPos, rSize, nRotation);
         }
         attrList->add(XML_behindDoc, bOpaque ? "0" : "1");
+        // Extend distance with the effect extent if the shape is not rotated, which is the opposite
+        // of the mapping done at import time.
         // The type of dist* attributes is unsigned, so make sure no negative value is written.
-        sal_Int64 nDistT
-            = std::max(static_cast<sal_Int64>(0), TwipsToEMU(aULSpaceItem.GetUpper()) - nTopExt);
+        sal_Int64 nTopExtDist = nRotation ? 0 : nTopExt;
+        sal_Int64 nDistT = std::max(static_cast<sal_Int64>(0),
+                                    TwipsToEMU(aULSpaceItem.GetUpper()) - nTopExtDist);
         attrList->add(XML_distT, OString::number(nDistT).getStr());
-        sal_Int64 nDistB
-            = std::max(static_cast<sal_Int64>(0), TwipsToEMU(aULSpaceItem.GetLower()) - nBottomExt);
+        sal_Int64 nBottomExtDist = nRotation ? 0 : nBottomExt;
+        sal_Int64 nDistB = std::max(static_cast<sal_Int64>(0),
+                                    TwipsToEMU(aULSpaceItem.GetLower()) - nBottomExtDist);
         attrList->add(XML_distB, OString::number(nDistB).getStr());
-        sal_Int64 nDistL
-            = std::max(static_cast<sal_Int64>(0), TwipsToEMU(aLRSpaceItem.GetLeft()) - nLeftExt);
+        sal_Int64 nLeftExtDist = nRotation ? 0 : nLeftExt;
+        sal_Int64 nDistL = std::max(static_cast<sal_Int64>(0),
+                                    TwipsToEMU(aLRSpaceItem.GetLeft()) - nLeftExtDist);
         attrList->add(XML_distL, OString::number(nDistL).getStr());
-        sal_Int64 nDistR
-            = std::max(static_cast<sal_Int64>(0), TwipsToEMU(aLRSpaceItem.GetRight()) - nRightExt);
+        sal_Int64 nRightExtDist = nRotation ? 0 : nRightExt;
+        sal_Int64 nDistR = std::max(static_cast<sal_Int64>(0),
+                                    TwipsToEMU(aLRSpaceItem.GetRight()) - nRightExtDist);
         attrList->add(XML_distR, OString::number(nDistR).getStr());
         attrList->add(XML_simplePos, "0");
         attrList->add(XML_locked, "0");
